deployment/branches/deployment.yaml
---
apiVersion: "extensions/v1beta1"
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: web-static-ip
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
spec:
  rules:
    - host: #ENVIRONMENT#.phpmyadmin.oasys.test.thecodingmachine.com
      http:
        paths:
          - path: /
            backend:
              serviceName: phpmyadmin
              servicePort: 80
    - host: #ENVIRONMENT#.www.oasys.test.thecodingmachine.com
      http:
        paths:
          - path: /
            backend:
              serviceName: webapp
              servicePort: 80
    - host: #ENVIRONMENT#.api.oasys.test.thecodingmachine.com
      http:
        paths:
          - path: /
            backend:
              serviceName: api
              servicePort: 80
---
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  name: "mysql"
  labels:
    app: "mysql"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "mysql"
  template:
    metadata:
      labels:
        app: "mysql"
    spec:
      containers:
        - name: "mysql"
          image: "mysql:8.0"
          imagePullPolicy: Always
          args:
            - --max_allowed_packet=512M
            - --default-authentication-plugin=mysql_native_password
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-data-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: "mysql"
spec:
  selector:
    app: "mysql"
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
---
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  name: "phpmyadmin"
  labels:
    app: "phpmyadmin"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "phpmyadmin"
  template:
    metadata:
      labels:
        app: "phpmyadmin"
    spec:
      containers:
        - name: "phpmyadmin"
          image: "phpmyadmin/phpmyadmin:4.8"
---
apiVersion: v1
kind: Service
metadata:
  name: "phpmyadmin"
spec:
  selector:
    app: "phpmyadmin"
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  name: "api"
  labels:
    app: "api"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "api"
  template:
    metadata:
      labels:
        app: "api"
    spec:
      containers:
        - name: "api"
          image: "git.thecodingmachine.com:444/tcm-projects/oasys/api:#ENVIRONMENT#"
          imagePullPolicy: Always
      imagePullSecrets:
        - name: "tcmregistry"
---
apiVersion: v1
kind: Service
metadata:
  name: "api"
spec:
  selector:
    app: "api"
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  name: "webapp"
  labels:
    app: "webapp"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "webapp"
  template:
    metadata:
      labels:
        app: "webapp"
    spec:
      containers:
        - name: "webapp"
          image: "git.thecodingmachine.com:444/tcm-projects/oasys/webapp:#ENVIRONMENT#"
          imagePullPolicy: Always
      imagePullSecrets:
        - name: "tcmregistry"
---
apiVersion: v1
kind: Service
metadata:
  name: "webapp"
spec:
  selector:
    app: "webapp"
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
